# cspray

./: .gitignore  README.md  pyproject.toml  run_tests.sh
benchmark_scripts/: cspray_benchmark.ipynb  scanpy_nb.py
databricks/: 00_download_data.py  01_run_cspray.py  02_celltype_calling.py  README.md  config.yaml.example
examples/: single_run_example.py
src/cspray/: _arrow_scanpy_clustering.py  _kmeans.py  _markers.py  _pca.py  data.py  preprocessing.py  read.py  tools.py  utils.py  write.py
tests/integration/: conftest.py  test_integration.py
